unpackaged/main/default/objects/Account/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>The product discount as a percentage.</description>
    <formula>Discount_Rate__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>