unpackaged/main/default/objects/Account/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <description>The discounted product rate for this customer.</description>
    <label>Discount Rate</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>