unpackaged/main/default/objects/Account/fields/Related_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Related_Distributor__c</fullName>
    <label>Related Distributor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab Best Buys</fullName>
            </value>
            <value>
                <fullName>Lab Products.com</fullName>
            </value>
            <value>
                <fullName>Best in Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>